--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	margin-bottom: 1rem;
 
 	& > .tbr-header__title {
 		font-size: 1.5rem;
@@ -82,6 +81,11 @@ body {
 	align-items: center;
 	gap: 1rem;
 	width: 100%;
+
+	& > .tbr-current-value {
+		font-size: 1.25rem;
+		font-weight: bold;
+	}
 
 	& > .tbr-controls {
 		display: flex;
@@ -193,17 +197,21 @@ body {
 .tbr-audible-tab {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 	cursor: pointer;
-	padding: 2px 4px;
+	padding: 4px 6px;
 	border-radius: 4px;
-}
-
-.tbr-audible-tab:hover {
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color: rgba(255, 255, 255, 0.05);
+	transition: background-color 0.15s ease;
+	
+	&:hover {
+		background-color: rgba(0, 0, 0, 0.1);
+	}
 }
 
 .tbr-tab-icon {
-	margin-right: 6px;
+	margin-right: 8px;
+	flex-shrink: 0;
 }
 
 .tbr-tab-title {
@@ -211,4 +219,17 @@ body {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	color: var(--tbr-text-color);
+	flex-grow: 1;
+	margin-right: 8px;
+}
+
+.tbr-tab-volume {
+	font-size: 0.75rem;
+	flex-shrink: 0;
+	min-width: 35px;
+	text-align: center;
+	border-radius: 8px;
+	color: #fff;
+	font-weight: bold;
 }
