--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root {
 	--tbr-text-color: #333;
+	--tbr-text-color-light: #eee;
 	--tbr-text-grey-color: #666;
 	--url-text-color: #e2b041;
 	--url-text-color-2: #ffd25f;
@@ -8,7 +9,11 @@
 	--url-text-color-visited: #e2b041;
 
 	--tbr-body-color: #c1c1c1;
-	--tbr-background-pattern: linear-gradient(22.5deg, rgba(67, 67, 67, 0.02) 0%, rgba(67, 67, 67, 0.02) 29%, rgba(47, 47, 47, 0.02) 29%, rgba(47, 47, 47, 0.02) 37%, rgba(23, 23, 23, 0.02) 37%, rgba(23, 23, 23, 0.02) 55%, rgba(182, 182, 182, 0.02) 55%, rgba(182, 182, 182, 0.02) 69%, rgba(27, 27, 27, 0.02) 69%, rgba(27, 27, 27, 0.02) 71%, rgba(250, 250, 250, 0.02) 71%, rgba(250, 250, 250, 0.02) 100%), linear-gradient(67.5deg, rgba(117, 117, 117, 0.02) 0%, rgba(117, 117, 117, 0.02) 14%, rgba(199, 199, 199, 0.02) 14%, rgba(199, 199, 199, 0.02) 40%, rgba(33, 33, 33, 0.02) 40%, rgba(33, 33, 33, 0.02) 48%, rgba(135, 135, 135, 0.02) 48%, rgba(135, 135, 135, 0.02) 60%, rgba(148, 148, 148, 0.02) 60%, rgba(148, 148, 148, 0.02) 95%, rgba(53, 53, 53, 0.02) 95%, rgba(53, 53, 53, 0.02) 100%), linear-gradient(135deg, rgba(190, 190, 190, 0.02) 0%, rgba(190, 190, 190, 0.02) 6%, rgba(251, 251, 251, 0.02) 6%, rgba(251, 251, 251, 0.02) 18%, rgba(2, 2, 2, 0.02) 18%, rgba(2, 2, 2, 0.02) 27%, rgba(253, 253, 253, 0.02) 27%, rgba(253, 253, 253, 0.02) 49%, rgba(128, 128, 128, 0.02) 49%, rgba(128, 128, 128, 0.02) 76%, rgba(150, 150, 150, 0.02) 76%, rgba(150, 150, 150, 0.02) 100%), linear-gradient(90deg, #ffffff, #ffffff);
+	--tbr-background-pattern: linear-gradient(135deg, transparent 0%, transparent 6%, rgba(71, 71, 71, 0.04) 6%, rgba(71, 71, 71, 0.04) 22%, transparent 22%, transparent 100%),
+		linear-gradient(45deg, transparent 0%, transparent 20%, rgba(71, 71, 71, 0.04) 20%, rgba(71, 71, 71, 0.04) 47%, transparent 47%, transparent 100%),
+		linear-gradient(135deg, transparent 0%, transparent 24%, rgba(71, 71, 71, 0.04) 24%, rgba(71, 71, 71, 0.04) 62%, transparent 62%, transparent 100%),
+		linear-gradient(45deg, transparent 0%, transparent 73%, rgba(71, 71, 71, 0.04) 73%, rgba(71, 71, 71, 0.04) 75%, transparent 75%, transparent 100%),
+		linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
 }
 
 * {
@@ -77,7 +82,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 300px;
+	min-height: 300px;
 	width: 400px;
 	background-color: var(--tbr-body-color);
 }
@@ -88,6 +93,7 @@ body {
 	height: 100%;
 	width: 100%;
 	padding: 1rem;
+	gap: 1.5rem;
 	background-image: var(--tbr-background-pattern);
 }
 
@@ -119,7 +125,7 @@ body {
 	width: 100%;
 	
 	& > .tbr-current-value {
-		font-size: 1.25rem;
+		font-size: 2rem;
 		font-weight: bold;
 	}
 	
@@ -127,6 +133,7 @@ body {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
+		margin-block: 0rem 1rem;
 		
 		& > .tbr-controls__adjust {
 			display: flex;
@@ -155,17 +162,6 @@ body {
 	margin-top: auto;
 }
 
-.tbr-warning-text {
-	display: flex;
-	flex-direction: column;
-	gap: 0.25rem;
-	font-size: 0.85rem;
-	color: #b22222;
-	text-align: center;
-	margin: 0;
-	padding: 0.5rem 0;
-}
-
 .tbr-credit {
 	color: var(--tbr-text-grey-color);
 	text-align: right;
@@ -184,7 +180,7 @@ body {
   -webkit-appearance: none;
 	appearance: none;
   width: 100%;
-  height: 14px;
+  height: 10px;
   border-radius: 7px;
   background: #ccc;
   outline: none;
@@ -194,20 +190,20 @@ body {
 
 #vol-slider::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
-  background: #333;
+  background: var(--tbr-text-color);
   cursor: pointer;
   position: relative;
   z-index: 2;
 }
 
 #vol-slider::-moz-range-thumb {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
-  background: #333;
+  background: var(--tbr-text-color-light);
   cursor: pointer;
   position: relative;
   z-index: 2;
