--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,8 @@ body {
 .tbr-audible-tabs-list {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	gap: 4px;
 	max-height: 150px;
 	overflow-y: auto;
