--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,9 @@
 		linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
 }
 
-* {
+*,
+*::before,
+*::after {
 		box-sizing: border-box;
 } 
 
